# global-cancer-trends-analysis

./: .gitignore  README.md  pyproject.toml
analysis/: findings.json
analysis/summary_tables/: age_peaks.csv  current_burden.csv  current_rankings.csv  historical_mortality_change.csv  projections_2050.csv  sex_gap.csv
config/: age_groups.csv  cancer_taxonomy.csv  geographies.csv  icd_mappings.csv  sources.yml  who_list_mappings.csv
data/interim/: continuity.csv  mortality.parquet  mortality_by_age.parquet
data/processed/: cancer_observations.parquet  cancers.csv  coverage.csv  validation.csv  who_reconciliation.csv
data/web/: manifest.json  routes.json  starter.json
docs/: data-quality.md  limitations.md  methodology.md  portfolio-integration.md  sources.md
docs/plans/: 2026-07-14-global-cancer-explorer-design.md  2026-07-14-global-cancer-explorer-implementation.md
notebooks/: global_cancer_trends.ipynb
pipeline/: README.md  build_cervix_wide.py  build_hpv.py  build_orophar.py  build_web.py  build_who.py  corr.py  finalize_hpv.py  paths.py  taxonomy.py  validate.py
scripts/: build_dataset.py  download_sources.py  execute_notebook.py  package_site.py
site/: index.html  package.json
site/tests/: charts.test.js  content.test.js  data-client.test.js  (+3 more)
tests/: test_analyse.py  test_compatibility.py  test_download.py  test_global_adapters.py  test_mappings.py  test_national_adapters.py  test_notebook.py  test_package.py  test_schemas.py  test_site_package.py  test_sources.py  test_transform.py  test_validate.py  test_web_data.py  test_who_mortality.py
(+493 files in other folders)
