[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-cancer-trends-analysis"
version = "0.1.0"
description = "High-granularity global cancer trends data pipeline and bilingual explorer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=17",
  "pydantic>=2.9",
  "PyYAML>=6.0",
  "requests>=2.32",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "matplotlib>=3.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

